--- a/contact.html
+++ b/contact.html
@@ -91,8 +91,8 @@
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dignissimos veniam harum quibusdam officiis alias obcaecati cumque qui et libero. Quaerat, quisquam dolorem officiis quibusdam magnam hic cum maxime aliquid ex.</p>
             <ul>
               <li><span>Address</span>Alajuela Province, Upala, Costa Rica</li>
-              <li><span>Phone</span> +506 6161 7190</li>
-              <li><span>Email</span> jvalles88@gmail.com</li>
+              <li><span>Phone</span> +506 6161 6160</li>
+              <li><span>Email</span> Xionesj@gmail.com</li>
             </ul>
           </div>
         </div>
